refactor: simplify xml builders and generic extensions